fix: styling that got broken in v13 update
addresses COR-531

--- a/css/yzecoriolis.css
+++ b/css/yzecoriolis.css
@@ -177,6 +177,15 @@
   text-shadow: 0 0 10px red;
   cursor: pointer;
 }
+/*
+amending some classes to help official modules work in v13
+*/
+.sizedCenteredImageContainer img {
+  display: inline-block;
+}
+.entryContent .coriolis-sidebar h2 {
+  color: white;
+}
 .yzecoriolis.sheet.actor .display-grid {
   display: grid;
   grid-template-columns: 1fr;
